@@ -154,6 +154,11 @@ public:
     */
    //@{
    /**
+    * @since 1.0.2
+    */
+   void resetAllDevicesAndProxies();
+
+   /**
     * Updates the data in all the devices.
     * This calls updateData() on all the devices in the device table.
     */
