@@ -67,6 +67,8 @@ void CommandProxy::updateData()
 {
    if (!isStupefied())
    {
+      // Make sure dependencies are updated.
+      getProxiedInputDevice()->updateDataIfNeeded();
       mData = mTypedDevice->getCommandData(mUnitNum);
    }
 }
