@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Dec-09-2006 patrick     Fixed frame delay problems in devices that are relative
+                        to other proxied devices. Patch submitted by Frederic
+                        Drolet.
 Nov-07-2006 patrick     Added analog support to the VRPN driver.
 Jul-13-2006 patrick     Implemented automatic linking of the Gadgeteer library.
 Jul-08-2006 patrick     Added support for building universal binaries on Mac
